# muscles-sse

./: README.md  pyproject.toml
src/muscles_sse/: __init__.py  adapter.py
tests/: test_adapter.py
